@@ -1,7 +1,7 @@
 
 
           --------------------------------------------------------
-            Gavare's eXperimental Emulator   --   GXemul 0.4.7.1
+            Gavare's eXperimental Emulator   --   GXemul 0.4.7.2
           --------------------------------------------------------
 
 
