@@ -10,7 +10,7 @@
 
 
 
-<h2>Release notes for GXemul 0.4.7.1</h2>
+<h2>Release notes for GXemul 0.4.7.2</h2>
 
 <p><i>Copyright (C) 2003-2009  Anders Gavare</i>
 
@@ -49,7 +49,7 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 
 </ul>
 
-<p><br><b>The changes between release 0.4.7 and 0.4.7.1 are:</b>
+<p><br>The changes between release 0.4.7 and 0.4.7.1 are:
 <ul>
 
   <li>Applying a man page hypenation patch from Jonathan Wiltshire.
@@ -57,6 +57,14 @@ and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
   <li>Some more missing M88K instructions added.
   <li>NetBSD/hpcmips can now be installed and run using serial
 	console (i.e. without -X), in addition to using the framebuffer.
+
+</ul>
+
+<p><br><b>The changes between release 0.4.7.1 and 0.4.7.2 are:</b>
+<ul>
+
+  <li>HelenOS 0.4.0 has been released, and the guest OS page has been
+  	updated to reflect this.
 
 </ul>
 
